# cgo_groupwork

./: .gitignore  Network.py  dataloader.py  main.py  main.sh  memo.txt  options.py  output.txt  pyproject.toml  readme.md  single_state_tune.py  tune.py
.ipynb_checkpoints/: LICENSE-checkpoint  dataloader-checkpoint.py  main-checkpoint.py  main-checkpoint.sh  options-checkpoint.py  readme-checkpoint.md  tune-checkpoint.py
