[tool.poetry]
name = "cgo-groupwork"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "readme.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.4"
matplotlib = "3.7.1"
pandas = "2.2.2"
torch = {version = "2.0.1", source = "torch_cu118"}
torchvision = {version = "0.15.2", source = "torch_cu118"}
numpy = ">=1.26.0,<2.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"
mypy = "^1.10.1"


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
# disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".venv", "venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = ["E501", "W293"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.mccabe]
max-complexity = 5
